cmd/future-sight/manifest/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: future-sight
  namespace: future-sight
  labels:
    app.kubernetes.io/name: future-sight
spec:
  selector:
    app.kubernetes.io/name: future-sight
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8081
      name: web
    - protocol: TCP
      port: 8080
      targetPort: 8080
      name: api
  type: ClusterIP
