cmd/future-sight/manifest/prod/valkey.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: valkey
  namespace: future-sight
  labels:
    xeiaso.net/role: valkey
spec:
  replicas: 1
  selector:
    matchLabels:
      xeiaso.net/role: valkey
  template:
    metadata:
      labels:
        xeiaso.net/role: valkey
    spec:
      containers:
        - name: valkey
          image: 'docker.io/bitnami/valkey:latest'
          imagePullPolicy: Always
          ports:
            - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: valkey
  namespace: future-sight
  labels:
    xeiaso.net/role: valkey
spec:
  type: ClusterIP
  ports:
    - port: 6379
  selector:
    xeiaso.net/role: valkey
